--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   },
   "dependencies": {
     "bootstrap-sass": "^3.0.0",
+    "jquery": "^2.2.2",
     "laravel-elixir": "^5.0.0",
     "laravel-elixir-stylus": "^1.0.1",
     "laravel-elixir-vueify": "^1.0.3",
+    "materialize-css": "^0.97.6",
     "vue": "^1.0.20",
     "vue-resource": "^0.7.0"
   }
